# chip8

./: CMakeLists.txt  README.md
include/: chip8.h  instructions.h
src/: chip8.c  instructions.c  main.c
